Fix font-size & text-align @about paragraph

--- a/style.css
+++ b/style.css
@@ -399,36 +399,35 @@ footer {
 /* Adjustment font-size for about-p */
 @media (max-width: 320px) {
   .about-p {
-    font-size: 5px;
+    font-size: 16px;
     text-align: justify;
   }
 }
 
-@media (max-width: 375px) {
+@media (min-width: 321px) {
   .about-p {
     font-size: 17px;
     text-align: justify;
   }
 }
 
-@media (max-width: 425px) {
+@media (min-width: 425px) {
   .about-p {
     font-size: 18px;
     text-align: justify;
   }
 }
 
-@media (max-width: 768px) {
+@media (min-width: 768px) {
   .about-p {
     font-size: 20px;
-    text-align: justify;
+    text-align: center;
   }
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 1024px) {
   .about-p {
-    font-size: 21px;
-    text-align: justify;
+    font-size: 26px;
   }
 }
 
